--- a/calibre2jellyfin.cfg
+++ b/calibre2jellyfin.cfg
@@ -1,4 +1,6 @@
 # file:     calibre2jelly.cfg
+# loc:      linux: place in ~/.config/
+#           windows: same location as script
 # desc:     configuration/control file for the calibre2jelly.py script
 
 # Multiple libraries may be created.  Each target library together with
