fea: configuration and command line additions
* 2024-01-27
    * Add support for mangling the metadata title sort value
    * Make metadata mangling behavior configurable (new configuration parameters)
        * mangleMetaTitle = [1 | 0]
        * mangleMetaTitleSort = [1 | 0]
    * Add command line option to force update of all metadata files.
        * -\-update-all-metadata

--- a/calibre2jellyfin.cfg
+++ b/calibre2jellyfin.cfg
@@ -2,6 +2,7 @@
 # loc:      linux: place in ~/.config/
 # desc:     configuration/control file for the calibre2jelly.py script
 
+# =============================================================
 # Multiple libraries may be created.  Each target library together with
 # source and destination locations, and control options, is specified
 # by a "ConstructN" section.
@@ -11,6 +12,7 @@
 # otherwise distinguished from all other similar sections.  However
 # they are distinguised, the first nine letters of the section must
 # be exactly "Construct".
+# =============================================================
 
 [Construct]
 
@@ -48,8 +50,37 @@ authorFolders =
 #   book
 foldermode = author,series,book
 
+# -------------------------------------------------------------
+# New controls as of 2024-01-27
+# -------------------------------------------------------------
+#
+#   Regardless of settings below, mangling will not occur
+#   unless foldermode is 'author,series, book'.
+#
+#   If these parameters are not specified,
+#   behavior reverts to that of the original script
+#   which is equivalent to
+#       mangleMetaTitle = 1
+#       mangleMetaTitleSort = 0
+
+# Optional
+# Turn this option on to prepend the series index
+# to the metadata book title.
+# (Book folder name is always mangled regardless of this setting.)
+# Set this to 1 to enable, 0 to disable.
+mangleMetaTitle = 1
+
+# Optional
+# Turn this option on to prepend the series index
+# to the metadata title sort value.
+# Set this to 1 to enable, 0 to disable.
+mangleMetaTitleSort = 1
+
+# =============================================================
 # You might use a Construct like this for non-fiction books,
 # where organization by author and series is not useful.
+# =============================================================
+
 [Construct2]
 
 calibreStore = /home/shawn/Calibre Library
