doc: clarify that script only "exports" one book file per book folder

--- a/calibre2jellyfin.cfg
+++ b/calibre2jellyfin.cfg
@@ -26,7 +26,7 @@ calibreStore = /home/shawn/Calibre Library
 jellyfinStore = /home/shawn/tmp/books
 
 # multiline list of book extensions, in order of preference
-# Jellyfin recognizes epud, mobi, and pdf.
+# Jellyfin recognizes azw, azw3, epub, mobi, and pdf ebook types.
 # Set this to the list of book file types that you
 # want to output.
 bookfiletypes =
