doc: Update README.md for "series/book"  mode

--- a/calibre2jellyfin.cfg
+++ b/calibre2jellyfin.cfg
@@ -47,6 +47,7 @@ authorFolders =
 # Controls the library output structure
 # Must be one of:
 #   author,series,book
+#   series,book
 #   book
 foldermode = author,series,book
 
