doc: update cfg examples

--- a/calibre2jellyfin.cfg
+++ b/calibre2jellyfin.cfg
@@ -94,3 +94,19 @@ authorFolders =
     Donald Knuth
     Linus Torvalds
     ...
+
+# =============================================================
+# You might use a Construct like this for comics.
+# =============================================================
+
+[Construct3]
+
+calibreStore = /home/shawn/Calibre Library
+jellyfinStore = /home/shawn/tmp/comics
+foldermode = series,book
+bookfiletypes =
+    cbz
+authorFolders =
+    Stan Lee
+    Jim Davis
+    ...
