doc:update sample .cfg for series,book mode

--- a/calibre2jellyfin.cfg
+++ b/calibre2jellyfin.cfg
@@ -56,7 +56,7 @@ foldermode = author,series,book
 # -------------------------------------------------------------
 #
 #   Regardless of settings below, mangling will not occur
-#   unless foldermode is 'author,series, book'.
+#   unless foldermode is 'author,series, book' or 'series,book'.
 #
 #   If these parameters are not specified,
 #   behavior reverts to that of the original script
@@ -104,6 +104,8 @@ authorFolders =
 calibreStore = /home/shawn/Calibre Library
 jellyfinStore = /home/shawn/tmp/comics
 foldermode = series,book
+mangleMetaTitle = 1
+mangleMetaTitleSort = 1
 bookfiletypes =
     cbz
 authorFolders =
