feat:implement selection by subject, heavy refactoring

--- a/calibre2jellyfin.cfg
+++ b/calibre2jellyfin.cfg
@@ -25,7 +25,33 @@ calibreStore = /home/shawn/Calibre Library
 # will present to be stored.
 jellyfinStore = /home/shawn/tmp/books
 
-# multiline list of book extensions, in order of preference
+# Controls the library output structure
+# Must be one of:
+#   author,series,book
+#   series,book
+#   book
+foldermode = author,series,book
+
+# Turn this option on to prepend the series index
+# to the metadata book title.
+# Optional
+# New as of version 2024-01-27
+# Has no effect unless foldermode is 'author,series,boot' or 'series,book'.
+# (Book folder name is always mangled regardless of this setting.)
+# Set this to 1 to enable, 0 to disable.
+# If not present defaults to 1.
+mangleMetaTitle = 1
+
+# Turn this option on to prepend the series index
+# to the metadata title sort value.
+# Optional
+# New as of version 2024-01-27
+# Has no effect unless foldermode is 'author,series,boot' or 'series,book'.
+# Set this to 1 to enable, 0 to disable.
+# If not present defaults to 0.
+mangleMetaTitleSort = 1
+
+# Multiline list of book extensions, in order of preference
 # Jellyfin recognizes azw, azw3, epub, mobi, pdf, cbz, and cbr ebook types.
 # Set this to the list of book file types that you
 # want to output.
@@ -34,7 +60,18 @@ bookfiletypes =
     pdf
     mobi
 
-# multiline list of author folders.
+# Cause books to be selected by author or subject.
+# Optional
+# New as of version 2024-11-22
+# Must be one of author, subject
+# If not present, defaults to author.
+# Note that in the case of selection by subject, if the
+# Calibre metadata.opf file is missing, the book cannot
+# be selected.
+selectionMode = author
+
+# Multiline list of author folders.
+# Required when selectionMode = author. Ignored otherwise.
 # Author folders are expected to lie within the <calibreStore> location
 # defined above.
 # Set this to the list of folder names corresponding to the authors
@@ -44,38 +81,18 @@ authorFolders =
     Dean Koontz
     ...
 
-# Controls the library output structure
-# Must be one of:
-#   author,series,book
-#   series,book
-#   book
-foldermode = author,series,book
-
-# -------------------------------------------------------------
-# New controls as of 2024-01-27
-# -------------------------------------------------------------
-#
-#   Regardless of settings below, mangling will not occur
-#   unless foldermode is 'author,series, book' or 'series,book'.
-#
-#   If these parameters are not specified,
-#   behavior reverts to that of the original script
-#   which is equivalent to
-#       mangleMetaTitle = 1
-#       mangleMetaTitleSort = 0
-
-# Optional
-# Turn this option on to prepend the series index
-# to the metadata book title.
-# (Book folder name is always mangled regardless of this setting.)
-# Set this to 1 to enable, 0 to disable.
-mangleMetaTitle = 1
-
-# Optional
-# Turn this option on to prepend the series index
-# to the metadata title sort value.
-# Set this to 1 to enable, 0 to disable.
-mangleMetaTitleSort = 1
+# Multiline list of subjects (aka tags in Calibre)
+# Required when selectionMode = subject. Ignored otherwise.
+# New as of version 2024-11-22
+# Each line is a comma-delimited list of subjects (tags).
+# Lists implement AND logic. Lines implement OR logic.
+# Subjects are case-insensitive.
+# The example below would select any book having 
+# both "science fiction" AND "alien contact" tags, OR a "thriller" tag.
+# Note the commas should not be surrounded by spaces.
+subjects =
+    science fiction,alien contact
+    thriller
 
 # =============================================================
 # You might use a Construct like this for non-fiction books,
@@ -90,6 +107,7 @@ foldermode = book
 bookfiletypes =
     epub
     pdf
+selectionMode = author
 authorFolders =
     Donald Knuth
     Linus Torvalds
@@ -108,6 +126,8 @@ mangleMetaTitle = 1
 mangleMetaTitleSort = 1
 bookfiletypes =
     cbz
+    cbr
+selectionMode = author
 authorFolders =
     Stan Lee
     Jim Davis
