feat:implement selection mode 'all', cleanup/lint

--- a/calibre2jellyfin.cfg
+++ b/calibre2jellyfin.cfg
@@ -60,10 +60,11 @@ bookfiletypes =
     pdf
     mobi
 
-# Cause books to be selected by author or subject.
+# Cause books to be selected for export by author or subject,
+# or all books in the source library to be exported
 # Optional
 # New as of version 2024-11-22
-# Must be one of author, subject
+# Must be one of author, subject, all
 # If not present, defaults to author.
 # Note that in the case of selection by subject, if the
 # Calibre metadata.opf file is missing, the book cannot
