feat:add --version cmd line argumnet Lines starting

--- a/calibre2jellyfin.cfg
+++ b/calibre2jellyfin.cfg
@@ -1,6 +1,7 @@
 # file:     calibre2jelly.cfg
 # loc:      linux: place in ~/.config/
 # desc:     configuration/control file for the calibre2jelly.py script
+# version:  2024-11-22
 
 # =============================================================
 # Multiple libraries may be created.  Each target library together with
