doc:warranty disclaimer, misc doc touchups, no functional changes

--- a/calibre2jellyfin.cfg
+++ b/calibre2jellyfin.cfg
@@ -11,22 +11,22 @@
 # Sections must be uniquely named.  Construct sections appearing after
 # the first one must be numbered (e.g. [Construct2], [Construct3], ...) or
 # otherwise distinguished from all other similar sections.  However
-# they are distinguised, the first nine letters of the section must
+# they are distinguished, the first nine letters of the section must
 # be exactly "Construct".
 # =============================================================
 
 [Construct]
 
-# Calibre storage location (top level source location)
+# Calibre storage location (top level source location).
 # Set this to the full path where your Calibre books are stored.
 calibreStore = /home/shawn/Calibre Library
 
-# Jellyfin storage location (top level destination location), must exist
+# Jellyfin storage location (top level destination location), must exist.
 # Set this to the full path where you want the library that jellyfin
 # will present to be stored.
 jellyfinStore = /home/shawn/tmp/books
 
-# Controls the library output structure
+# Controls the library output structure.
 # Must be one of:
 #   author,series,book
 #   series,book
@@ -36,7 +36,7 @@ foldermode = author,series,book
 # Turn this option on to prepend the series index
 # to the metadata book title.
 # Optional
-# New as of version 2024-01-27
+# New as of version 2024-01-27.
 # Has no effect unless foldermode is 'author,series,boot' or 'series,book'.
 # (Book folder name is always mangled regardless of this setting.)
 # Set this to 1 to enable, 0 to disable.
@@ -46,7 +46,7 @@ mangleMetaTitle = 1
 # Turn this option on to prepend the series index
 # to the metadata title sort value.
 # Optional
-# New as of version 2024-01-27
+# New as of version 2024-01-27.
 # Has no effect unless foldermode is 'author,series,boot' or 'series,book'.
 # Set this to 1 to enable, 0 to disable.
 # If not present defaults to 0.
