feat:option to prefix metadata title with unformatted series index

--- a/calibre2jellyfin.cfg
+++ b/calibre2jellyfin.cfg
@@ -33,17 +33,20 @@ jellyfinStore = /home/shawn/tmp/books
 #   book
 foldermode = author,series,book
 
-# Turn this option on to prepend the series index
-# to the metadata book title.
+# Set this option to control the series index
+# prefixed to the metadata title.
 # Optional
 # New as of version 2024-01-27.
 # Has no effect unless foldermode is 'author,series,boot' or 'series,book'.
 # (Book folder name is always mangled regardless of this setting.)
-# Set this to 1 to enable, 0 to disable.
+# Values:
+#   0 - Disable title mangling
+#   1 - Prefix title with formatted series index (e.g. "007")
+#   2 - Prefix title with unformatted series index (e.g. "7")
 # If not present defaults to 1.
-mangleMetaTitle = 1
+mangleMetaTitle = 2
 
-# Turn this option on to prepend the series index
+# Turn this option on to prepend the formatted (e.g. "007" or "007.02") series index
 # to the metadata title sort value.
 # Optional
 # New as of version 2024-01-27.
